force-app/main/default/objects/Jira_Epic__c/Jira_Epic__c.object-meta.xml
<CustomObject>
    <label>Epic</label>
    <nameField>
        <label>Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>