force-app/main/default/objects/Jira_Epic__c/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <externalId>true</externalId>
    <label>Assignee Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>