force-app/main/default/objects/Jira_Epic__c/fields/Assignee_User__c.field-meta.xml
<CustomField>
    <fullName>Assignee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Epics_Assignee_User</relationshipName>
    <type>Lookup</type>
</CustomField>