force-app/main/default/objects/Jira_Epic__c/fields/Reporter_User__c.field-meta.xml
<CustomField>
    <fullName>Reporter_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporter User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Epics_Reporter_User</relationshipName>
    <type>Lookup</type>
</CustomField>