force-app/main/default/objects/Jira_Epic__c/fields/Story_Point__c.field-meta.xml
<CustomField>
    <fullName>Story_Point__c</fullName>
    <label>Story Point</label>
    <summarizedField>Jira_Issue__c.Story_Points__c</summarizedField>
    <summaryForeignKey>Jira_Issue__c.Epic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>